tests/parser/good/loop_recur.hel
// @name loop_recur
// @phase parser
// @expect success

sum_loop = (n: i32): i32 {
    loop (acc = 0, i: i32 = 0) {
        if (i >= n) {
            acc
        } else {
            recur(acc + i, i + 1)
        }
    }
};

forever = () : () {
    loop () {
        recur()
    }
}
