tests/parser/bad/recur_no_paren.hel
// @name recur_no_paren
// @phase parser
// @expect error

f = () : i32 {
    loop () {
        recur 1
    }
}
